--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -2,13 +2,14 @@
   display: flex;
   flex-direction: column;
   height: 100vh;
+  background-image: url("../images/wall.png");
 }
 
 .menu {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  
+  border-bottom: 5px solid #ffd700;
   height: 90px;
   width: 100%;
   background-color: #000000;
@@ -20,19 +21,33 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px solid #ff0000;
 }
 
 .square {
   height: 150px;
   width: 150px;
-  background-color: #7fffd4;
+  background-color: #1aeaa5;
   border: 1px solid #000000;
+  cursor: pointer;
 }
 
 .enemy {
-  background-color: #ff0000;
+  background-image: url("../images/ralph.png");
+  background-size: cover;
 }
+
+.menu-lives {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.second {
+  margin-top: 1rem;
+}
+
+
+
 
 
 
