--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -45,6 +45,15 @@
 .second {
   margin-top: 1rem;
 }
+.resetBtn {
+  margin: 20px auto;
+  width: 120px;
+  padding: 10px;
+  background-color: #000000;
+  color: #ffd700;
+  border: 2px solid #ffd700;
+  border-radius: 1rem;
+}
 
 
 
